syntax = "proto3";

option go_package = "github.com/lioia/distributed-pagerank/lib";

package lib;

service MasterNode {
  // TODO: messages should contains state update
  rpc HealthCheck(Empty) returns (Empty) {}
  rpc GetInfo(ConnectionInfo) returns (Info) {}
  rpc UploadGraph(GraphFile) returns (Ranks) {}
}

service Layer1Node {
  // TODO: messages should contains state update
  rpc HealthCheck(Empty) returns (Empty) {}
  rpc Announce(AnnounceMessage) returns (Empty) {}
}

service Layer2Node {
  // TODO: messages should contains state update
  rpc HealthCheck(Empty) returns (Empty) {}
}

message Empty {}

message ConnectionInfo {
  string address = 1;
  int32 port = 2;
}

message Info {
  int32 layerNumber = 1;
  // Layer 1 info
  repeated ConnectionInfo layer1s = 2;
  // repeated string layer1Addresses = 2; // list of layer 1 node address
  // repeated int32 layer1Port = 3;       // list of layer 1 node port
  // Layer 2 info
  optional ConnectionInfo assigned = 3;
  // optional string assignedAddress = 4; // assigned layer 1 node address
  // optional int32 assignedPort = 5;     // assigned layer 1 node port
}

message AnnounceMessage {
  ConnectionInfo connection = 1; // Join node connection info
  int32 layerNumber = 2;         // Join node layer number
}

message GraphFile { bytes contents = 1; }

message Ranks {
  repeated int32 ID = 1;     // array of Graph Node IDs
  repeated double ranks = 2; // array of Graph Node rank
}

message GraphNode {
  int32 ID = 1;                       // Node ID
  map<int32, GraphNode> OutLinks = 2; // Nodes this node points to
  double Rank = 3;                    // Current PageRank
  double EValue = 4;                  // E probability vector for this node
}
